--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 crispy-bootstrap5==2023.10
+cryptography==42.0.8
 Django==4.2.7
 django-allauth==0.63.3
 django-bootstrap-v5==1.0.11
@@ -10,7 +12,11 @@ django-bootstrap5==23.4
 django-crispy-forms==2.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
+gunicorn==22.0.0
 idna==3.7
+jwt==1.3.1
+packaging==24.1
+pycparser==2.22
 python-decouple==3.8
 pytz==2024.1
 requests==2.32.3
